[gd_scene load_steps=2 format=3 uid="uid://d8xvqp8m6reso"]

[ext_resource type="Script" path="res://src/ui/resolution_screen.gd" id="1_resolution"]

[node name="ResolutionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_resolution")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.06, 0.08, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="OutcomeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You Made It"
horizontal_alignment = 1

[node name="OutcomeSubtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "The mountain let you go"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Good decisions compound."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"
